[gd_scene load_steps=22 format=3 uid="uid://oekptli57t6k"]

[ext_resource type="Script" path="res://Scripts/GUI/CreatureInfo.gd" id="1_aaqh4"]
[ext_resource type="Theme" uid="uid://cqv6gnwwow7vr" path="res://Themes/Theme.tres" id="2_pg5hp"]
[ext_resource type="StyleBox" uid="uid://b7nm7yb2yrwyh" path="res://Themes/Back.tres" id="3_btj5w"]
[ext_resource type="Texture2D" uid="uid://bcupjxsdyyuor" path="res://Textures/TileTypes/grass.png" id="4_mps55"]
[ext_resource type="Texture2D" uid="uid://cu56bpblqlaaj" path="res://Textures/TileTypes/sand.png" id="5_c6pwv"]
[ext_resource type="Texture2D" uid="uid://c4h7h41t102dt" path="res://Textures/TileTypes/stone.png" id="6_j0p72"]
[ext_resource type="Texture2D" uid="uid://bi0e4e3luxkfm" path="res://Textures/TileTypes/watter.png" id="7_1shrl"]
[ext_resource type="Texture2D" uid="uid://bh5yxuiuwl50a" path="res://Textures/GUI/white_on_black.png" id="8_h4biv"]
[ext_resource type="Texture2D" uid="uid://da0us5qkic6av" path="res://Textures/Creature/creature.png" id="9_0a33n"]
[ext_resource type="Texture2D" uid="uid://okxco4r283hu" path="res://Textures/GUI/arrow.png" id="10_ixt1x"]
[ext_resource type="Texture2D" uid="uid://bkfvljukumhgv" path="res://Textures/GUI/circle.png" id="11_sfrdy"]
[ext_resource type="PackedScene" uid="uid://cwf8ewwih5k8s" path="res://Scenes/GUI/SavePopUp.tscn" id="12_snf8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2nw8y"]
bg_color = Color(0.603922, 0.4, 0.164706, 0.835294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1406g"]
bg_color = Color(0.935134, 0.00337122, 0.351631, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pgp2o"]
bg_color = Color(0.164706, 0.607843, 0.768627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cfxop"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_it4wm"]
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_rw6x2"]
font_size = 18

[sub_resource type="Theme" id="Theme_1af7s"]

[sub_resource type="LabelSettings" id="LabelSettings_vr7o2"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_gv256"]
font_size = 14

[node name="CreatureInfo" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -204.5
offset_bottom = 204.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("1_aaqh4")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -253.5
offset_bottom = 253.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2nw8y")

[node name="PanelContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Energy" type="Label" parent="PanelContainer2/PanelContainer/GridContainer"]
layout_mode = 2
text = "Energy
"
horizontal_alignment = 1

[node name="EnergyCenter" type="CenterContainer" parent="PanelContainer2/PanelContainer/GridContainer"]
layout_mode = 2

[node name="EnergyBar" type="ProgressBar" parent="PanelContainer2/PanelContainer/GridContainer/EnergyCenter"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("2_pg5hp")
theme_override_styles/background = ExtResource("3_btj5w")
value = 10.0
show_percentage = false

[node name="EnergyCount" type="Label" parent="PanelContainer2/PanelContainer/GridContainer/EnergyCenter"]
layout_mode = 2
text = "10 / 100"

[node name="Health" type="Label" parent="PanelContainer2/PanelContainer/GridContainer"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="HealthCenter" type="CenterContainer" parent="PanelContainer2/PanelContainer/GridContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="PanelContainer2/PanelContainer/GridContainer/HealthCenter"]
custom_minimum_size = Vector2(150, 25)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource("2_pg5hp")
theme_override_styles/background = ExtResource("3_btj5w")
theme_override_styles/fill = SubResource("StyleBoxFlat_1406g")
value = 10.0
show_percentage = false

[node name="HealthCount" type="Label" parent="PanelContainer2/PanelContainer/GridContainer/HealthCenter"]
layout_mode = 2
text = "10 / 100
"

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
text = "Influnece"
horizontal_alignment = 1

[node name="Influence" type="GridContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 5
columns = 2

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Rotate Left "
mouse_filter = 1
text = "Rotate L"

[node name="InfluenceRotateL" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="Label2" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Rotate Right"
mouse_filter = 1
text = "Rotate R"

[node name="InfluenceRotateR" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="Label3" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Move Forward"
mouse_filter = 1
text = "Move F"

[node name="InfluenceMoveF" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="Label4" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Move Backwards"
mouse_filter = 1
text = "Move B"

[node name="InfluenceMoveB" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="Label5" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Pause Reproduction
"
mouse_filter = 1
text = "Pause R"

[node name="InfluenceStopR" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="Label6" type="Label" parent="PanelContainer2/PanelContainer/Influence"]
layout_mode = 2
tooltip_text = "Pause Attacking"
mouse_filter = 1
text = "Pause A"

[node name="InfluenceStopA" type="ProgressBar" parent="PanelContainer2/PanelContainer/Influence"]
custom_minimum_size = Vector2(110, 15)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_pgp2o")
value = 20.0
show_percentage = false

[node name="DNAGrid" type="GridContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Label" type="Label" parent="PanelContainer2/PanelContainer/DNAGrid"]
layout_mode = 2
text = "Value # 1"

[node name="Label4" type="Label" parent="PanelContainer2/PanelContainer/DNAGrid"]
layout_mode = 2
text = "Value # 1"

[node name="Label5" type="Label" parent="PanelContainer2/PanelContainer/DNAGrid"]
layout_mode = 2
text = "Value # 1"

[node name="Imortal" type="Label" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
text = "Is Imortal"
horizontal_alignment = 1

[node name="ProficienctyLable" type="Label" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
text = "Proficiency
"
horizontal_alignment = 1

[node name="Proficiency" type="GridContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 0
columns = 4

[node name="Grass" type="TextureRect" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture = ExtResource("4_mps55")
expand_mode = 4

[node name="Sand" type="TextureRect" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture = ExtResource("5_c6pwv")
expand_mode = 4

[node name="Rock" type="TextureRect" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture = ExtResource("6_j0p72")
expand_mode = 4

[node name="Watter" type="TextureRect" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(35, 30)
layout_mode = 2
texture = ExtResource("7_1shrl")
expand_mode = 4

[node name="GrassT" type="Label" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1.00x"
label_settings = SubResource("LabelSettings_cfxop")
horizontal_alignment = 1

[node name="SandT" type="Label" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1.00x"
label_settings = SubResource("LabelSettings_cfxop")
horizontal_alignment = 1

[node name="RockT" type="Label" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1.00x"
label_settings = SubResource("LabelSettings_cfxop")
horizontal_alignment = 1

[node name="WatterT" type="Label" parent="PanelContainer2/PanelContainer/Proficiency"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "1.00x"
label_settings = SubResource("LabelSettings_cfxop")
horizontal_alignment = 1

[node name="TaxCost" type="Label" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
text = "Cost 
"
label_settings = SubResource("LabelSettings_it4wm")
horizontal_alignment = 1

[node name="Generation" type="Label" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 2

[node name="Copy" type="Button" parent="PanelContainer2/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 1
text = "Copy"

[node name="Save" type="Button" parent="PanelContainer2/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 1
text = "Save"

[node name="Sensors" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.415888
anchor_top = -0.0977995
anchor_right = -0.415888
anchor_bottom = -0.0268949
offset_left = -176.0
offset_top = -67.5
offset_bottom = 159.5
scale = Vector2(1.5, 1.5)
theme_override_styles/panel = SubResource("StyleBoxFlat_2nw8y")

[node name="Label2" type="Label" parent="Sensors"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Sensors"
label_settings = SubResource("LabelSettings_rw6x2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="TextureRect" parent="Sensors"]
custom_minimum_size = Vector2(170, 170)
layout_mode = 2
offset_left = 2.66667
offset_top = 26.3333
offset_right = 172.667
offset_bottom = 196.333
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_1af7s")
texture = ExtResource("8_h4biv")
expand_mode = 2

[node name="CreatureTexture" type="TextureRect" parent="Sensors/ColorRect"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_0a33n")
expand_mode = 2

[node name="ArrowTemplate" type="TextureRect" parent="Sensors/ColorRect"]
self_modulate = Color(1, 1, 1, 0.807843)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -63.5
offset_right = 12.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(10.9492, 70.9648)
texture = ExtResource("10_ixt1x")
expand_mode = 4

[node name="Label" type="Label" parent="Sensors"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -49.0
offset_right = 41.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
text = "Internal Sensors"

[node name="Panel" type="Panel" parent="Sensors"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -33.0
offset_right = 83.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0

[node name="InternalSensors" type="HFlowContainer" parent="Sensors/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
metadata/_edit_lock_ = true

[node name="TemplateCircle" type="TextureRect" parent="Sensors/Panel/InternalSensors"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("11_sfrdy")
expand_mode = 2

[node name="SensorInfo" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = 76.0
offset_right = -108.0
offset_bottom = 206.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2nw8y")

[node name="VBoxContainer" type="VBoxContainer" parent="SensorInfo"]
layout_mode = 2
size_flags_vertical = 0

[node name="Name" type="Label" parent="SensorInfo/VBoxContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
text = "Select Sensor"
label_settings = SubResource("LabelSettings_vr7o2")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="Label" parent="SensorInfo/VBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Hower over sensor to display extra infromation."
label_settings = SubResource("LabelSettings_gv256")
autowrap_mode = 3

[node name="Separator" type="Label" parent="SensorInfo/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Save" parent="." instance=ExtResource("12_snf8p")]
layout_mode = 1
offset_left = -1201.0
offset_top = -115.0
offset_right = -1201.0
offset_bottom = -115.0

[connection signal="mouse_entered" from="PanelContainer2" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer2" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/HBoxContainer/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="PanelContainer2/PanelContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="mouse_entered" from="Sensors" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Sensors" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SensorInfo" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SensorInfo" to="." method="_on_mouse_exited"]
